--- a/requirements.txt
+++ b/requirements.txt
@@ -19,6 +19,7 @@ Flask-Cors==5.0.0
 gitdb==4.0.11
 GitPython==3.1.43
 googlemaps==4.10.0
+gunicorn==23.0.0
 idna==3.10
 importlib-metadata==8.5.0
 inflection==0.5.1
